# tutorial_inverse-kinematic

./: .gitignore  CMakeLists.txt  Constraint.cpp  Constraint.h  Cost.cpp  Cost.h  Module.cpp  Module.h  QP.cpp  QP.h  QPInverseKinematics.cpp  QPInverseKinematics.h  QPMasterClass.cpp  QPMasterClass.h  README.md  Robot.cpp  Robot.h  main.cpp
app/scripts/: tutorial_inverse-kinematic-app.xml  tutorial_inverse-kinematic-system.xml
